--- a/HTML/map/map1.html
+++ b/HTML/map/map1.html
@@ -9,11 +9,11 @@
         <head>
             <meta charset="utf-8" />
             <title></title>
-            <link rel="stylesheet" href="">
+            <link rel="stylesheet" href="../../CSS/map1.css">
         </head>
         <body id="map1">
             <div class="terrainMap1">
-                <img src="" alt="" srcset="">
+                <div id="playerMap1"></div>
                 <div class="obstacles">
                     <div class="obstacle black line01">&nbsp;</div>
                     <div class="obstacle black line02">&nbsp;</div>
@@ -33,41 +33,40 @@
                     <div class="obstacle black line16">&nbsp;</div>
                     <div class="obstacle black line17">&nbsp;</div>
                     <div class="obstacle black line18">&nbsp;</div>
-                    <div class="obstacle black line19">&nbsp;</div>
-                    <div class="obstacle black line20">&nbsp;</div>
+                    <div id ="porte1" class="obstacle marron line19"><img src="../../Images/decor/porte.png" alt=""></div>
                 </div>
                 <div class="Ennemi">
-                    <div class="obstacle blue monstre1"><img src="" alt=""></div>
-                    <div class="obstacle blue monstre2"><img src="" alt=""></div>
-                    <div class="obstacle blue monstre3"><img src="" alt=""></div>
-                    <div class="obstacle blue monstre4"><img src="" alt=""></div>
-                    <div class="obstacle blue monstre5"><img src="" alt=""></div>
-                    <div class="obstacle blue monstre6"><img src="" alt=""></div>
+                    <div class="obstacle blue monstre1"><img class="monstre" src="../../Images/decor/orcMarron.png" alt=""></div>
+                    <div class="obstacle blue monstre2"><img class="monstre" src="../../Images/decor/armureFantome.png" alt=""></div>
+                    <div class="obstacle blue monstre3"><img class="monstre" src="../../Images/decor/orcMarron.png" alt=""></div>
+                    <div class="obstacle blue monstre4"><img class="monstre" src="../../Images/decor/orcMarron.png" alt=""></div>
+                    <div class="obstacle blue monstre5"><img class="monstre" src="../../Images/decor/orcMarron.png" alt=""></div>
+                    <div class="obstacle blue monstre6"><img class="monstre" src="../../Images/decor/armureFantome.png" alt=""></div>
                 </div>
                 <div class="pieces">
-                    <div id="piece1" class="obstacle or piece5">PO</div>
-                    <div id="piece2" class="obstacle or piece6">PO</div>
-                    <div id="piece3" class="obstacle or piece7">PO</div>
-                    <div id="piece4" class="obstacle or piece8">PO</div>
+                    <div id="piece1" class="obstacle or piece5"></div>
+                    <div id="piece2" class="obstacle or piece6"></div>
+                    <div id="piece3" class="obstacle or piece7"></div>
+                    <div id="piece4" class="obstacle or piece8"></div>
                 </div>
                 <div class="deco">
-                    <div id="mur01" class="mur"><img src="" alt=""></div>
-                    <div id="mur02" class="mur"><img src="" alt=""></div>
-                    <div id="mur03" class="mur"><img src="" alt=""></div>
-                    <div id="mur04" class="mur"><img src="" alt=""></div>
-                    <div id="mur05" class="mur"><img src="" alt=""></div>
-                    <div id="mur06" class="mur"><img src="" alt=""></div>
-                    <div id="mur07" class="mur"><img src="" alt=""></div>
-                    <div id="mur08" class="mur"><img src="" alt=""></div>
-                    <div id="mur09" class="mur"><img src="" alt=""></div>
-                    <div id="mur10" class="mur"><img src="" alt=""></div>
-                    <div id="mur11" class="mur"><img src="" alt=""></div>
-                    <div id="mur12" class="mur"><img src="" alt=""></div>
-                    <div id="mur13" class="mur"><img src="" alt=""></div>
-                    <div id="mur14" class="mur"><img src="" alt=""></div>
-                    <div id="mur15" class="mur"><img src="" alt=""></div>
-                    <div id="mur16" class="mur"><img src="" alt=""></div>
-                    <div id="mur17" class="mur"><img src="" alt=""></div>
+                    <div id="mur01" class="mur"><img src="../../Images/decor/murAbiméMousse.png" alt=""></div>
+                    <div id="mur02" class="mur"><img src="../../Images/decor/murAbimé.png" alt=""></div>
+                    <div id="mur03" class="mur"><img src="../../Images/decor/murAbimé.png" alt=""></div>
+                    <div id="mur04" class="mur"><img src="../../Images/decor/murAbiméMousse.png" alt=""></div>
+                    <div id="mur05" class="mur"><img src="../../Images/decor/murQuart.png" alt=""></div>
+                    <div id="mur06" class="mur"><img src="../../Images/decor/murTierAbimé.png" alt=""></div>
+                    <div id="mur07" class="mur"><img src="../../Images/decor/mur.png" alt=""></div>
+                    <div id="mur08" class="mur"><img src="../../Images/decor/murAbiméMousse.png" alt=""></div>
+                    <div id="mur09" class="mur"><img src="../../Images/decor/murDemiAbimé.png" alt=""></div>
+                    <div id="mur10" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
+                    <div id="mur11" class="mur"><img src="../../Images/decor/murDemiAbimé.png" alt=""></div>
+                    <div id="mur12" class="mur"><img src="../../Images/decor/murQuartAbimé.png" alt=""></div>
+                    <div id="mur13" class="mur"><img src="../../Images/decor/murQuart.png" alt=""></div>
+                    <div id="mur14" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
+                    <div id="mur15" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
+                    <div id="mur16" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
+                    <div id="mur17" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
                     <div id="mur18" class="mur"><img src="" alt=""></div>
                     <div id="mur19" class="mur"><img src="" alt=""></div>
                     <div id="mur20" class="mur"><img src="" alt=""></div>
@@ -89,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <script src=""></script>
+            <script src="../../JS/jeu.js"></script>
             <footer></footer>
         </body>
     </div>
