--- a/HTML/map/map1.html
+++ b/HTML/map/map1.html
@@ -59,10 +59,10 @@
                     <div class="obstacle blue monstre6"><img class="monstre" src="../../Images/decor/armureFantome.png" alt=""></div>
                 </div>
                 <div class="pieces">
-                    <div id="piece1" class="obstacle or piece">PO</div>
-                    <div id="piece2" class="obstacle or piece">PO</div>
-                    <div id="piece3" class="obstacle or piece">PO</div>
-                    <div id="piece4" class="obstacle or piece">PO</div>
+                    <div id="piece1" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
+                    <div id="piece2" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
+                    <div id="piece3" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
+                    <div id="piece4" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
                 </div>
                 <div class="deco">
                     <div id="mur01" class="mur"><img src="../../Images/decor/murAbiméMousse.png" alt=""></div>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="menuOr">
                         <div class="pieceMenu">
-                            <div class="piece">PO</div>
+                            <div class="piece"><img src="../../Images/decor/coin.png" alt=""></div>
                           </div>
                         <div id="nombrePiece" class="nombrePiece">0</div>
                     </div>
