--- a/HTML/Connexion.html
+++ b/HTML/Connexion.html
@@ -37,7 +37,7 @@
                     <i class="fa fa-unlock-alt" aria-hidden="true"></i>
                     <input class="input-co" type="password" name="motDePasse" id="motDePasse" maxlength="30"
                         placeholder="Entrez votre mot de passe"
-                        pattern="(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[-+!*$@%_])([-+!*$@%_\w]{8,15})" required>
+                        pattern="" required>
                     <i class="fa fa-eye" aria-hidden="true"></i>
                 </div>
             </div>
