--- a/HTML/menuListe.html
+++ b/HTML/menuListe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width-device-width,initial-scale=1">
     <title>Menu</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
