--- a/HTML/map/map1.html
+++ b/HTML/map/map1.html
@@ -11,7 +11,7 @@
     <header></header>
     <div class="contenu">
         <div class="terrainMap1">
-            <div id="playerMap1">
+            <div id="playerMap1" class="persoChercheurDor">
                 <div class="hautPerso">
                     <div class="orbite">
                         <div class="oeil">
