--- a/HTML/map/map3.html
+++ b/HTML/map/map3.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title>terrain 3</title>
-    <link rel="stylesheet" href="../../CSS/map2.css">
+    <link rel="stylesheet" href="../../CSS/map3.css">
 </head>
 
 <body id="map3">
 
     <div class="contenu">
         <div class="terrainMap3">
-            <div id="playerMap3" class="persoChercheurDor">
+            <div id="playerMap3" class="persoPrinceMoustache">
                 <div class="hautPerso">
                     <div class="orbite">
                         <div class="oeil">
