avancement map3 html

--- a/HTML/map/map3.html
+++ b/HTML/map/map3.html
@@ -28,30 +28,32 @@
             </div>
         </div>
         <div class="obstacles">
-            <div class="obstacle black line01">&nbsp;</div>
-            <div class="obstacle black line02">&nbsp;</div>
-            <div class="obstacle black line03">&nbsp;</div>
-            <div class="obstacle black line04">&nbsp;</div>
-            <div class="obstacle black line38">&nbsp;</div>
-            <div class="obstacle black line39">&nbsp;</div>
-            <div class="obstacle black line40">&nbsp;</div>
-            <div class="obstacle black line41">&nbsp;</div>
-            <div class="obstacle black line42">&nbsp;</div>
-            <div class="obstacle black line43">&nbsp;</div>
-            <div class="obstacle black line44">&nbsp;</div>
-            <div class="obstacle black line45">&nbsp;</div>
-            <div class="obstacle black line46">&nbsp;</div>
-            <div class="obstacle black line47">&nbsp;</div>
-            <div class="obstacle black line48">&nbsp;</div>
-            <div class="obstacle black line49">&nbsp;</div>
-            <div class="obstacle black line50">&nbsp;</div>
-            <div class="obstacle black line51">&nbsp;</div>
-            <div class="obstacle black line52">&nbsp;</div>
-            <div class="obstacle black line53">&nbsp;</div>
-            <div class="obstacle black line54">&nbsp;</div>
-            <div class="obstacle black line55">&nbsp;</div>
-            <div class="obstacle black line56">&nbsp;</div>
-
+            <div class="obstacle color line01">&nbsp;</div>
+            <div class="obstacle color line02">&nbsp;</div>
+            <div class="obstacle color line03">&nbsp;</div>
+            <div class="obstacle color line04">&nbsp;</div>
+            <div class="obstacle color line38">&nbsp;</div>
+            <div class="obstacle color line39">&nbsp;</div>
+            <div class="obstacle color line40">&nbsp;</div>
+            <div class="obstacle color line41">&nbsp;</div>
+            <div class="obstacle color line42">&nbsp;</div>
+            <div class="obstacle color line43">&nbsp;</div>
+            <div class="obstacle color line44">&nbsp;</div>
+            <div class="obstacle color line45">&nbsp;</div>
+            <div class="obstacle color line46">&nbsp;</div>
+            <div class="obstacle color line47">&nbsp;</div>
+            <div class="obstacle color line48">&nbsp;</div>
+            <div class="obstacle color line49">&nbsp;</div>
+            <div class="obstacle color line50">&nbsp;</div>
+            <div class="obstacle color line51">&nbsp;</div>
+            <div class="obstacle color line52">&nbsp;</div>
+            <div class="obstacle color line53">&nbsp;</div>
+            <div class="obstacle color line54">&nbsp;</div>
+            <div class="obstacle color line55">&nbsp;</div>
+            <div class="obstacle color line56">&nbsp;</div>
+            <div class="obstacle color line58">&nbsp;</div>
+            <div class="obstacle color line59">&nbsp;</div>
+            <div class="obstacle color line60">&nbsp;</div>
             <div id="porte3Ferme" class="obstacle marron line57"><img src="../../Images/decor/porte.png" alt=""></div>
         </div>
         <div class="Ennemi">
@@ -73,6 +75,9 @@
             </div>
             <div class="obstacle blue monstre23"><img class="monstre" src="../../Images/decor/cyclope.png" alt="">
             </div>
+            <div class="obstacle blue monstre24"><img class="monstre" src="../../Images/decor/cyclope.png" alt="">
+            </div>
+            
         </div>
         <div class="pieces">
             <div id="piece9" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
@@ -82,6 +87,7 @@
             <div id="piece13" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
             <div id="piece14" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
             <div id="piece15" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
+            <div id="tresor" class="obstacle or tresor"><img src="../../Images/decor/tresor.png" alt=""></div>
         </div>
         <div class="deco">
         <div id="mur41" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
@@ -96,7 +102,7 @@
         <div id="mur50" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
         <div id="mur51" class="mur"><img src="../../Images/decor/murDemiAbimé.png" alt=""></div>
         <div id="mur52" class="mur"><img src="../../Images/decor/murQuartAbimé.png" alt=""></div>
-        <div id="mur53" class="mur"><img src="../../Images/decor/murQuart.png" alt=""></div>
+        <div id="mur53" class="mur"><img src="../../Images/decor/murQuartAbimé.png" alt=""></div>
         <div id="mur54" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
         <div id="mur55" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
         <div id="mur56" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
@@ -104,8 +110,12 @@
         <div id="mur58" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
         <div id="mur59" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
         <div id="mur60" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
+        <div id="mur61" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
+        <div id="mur62" class="mur"><img src="../../Images/decor/blockRouge.png" alt=""></div>
+        <div id="mur63" class="mur"><img src="../../Images/decor/blockRouge.png" alt=""></div>
+        <div id="mur64" class="mur"><img src="../../Images/decor/caisseInverse.png" alt=""></div>
     </div>
-    <div id="key2" class="obstacle key"><img src="../../Images/decor/key.png" alt=""></div>
+    <div id="key3" class="obstacle key"><img src="../../Images/decor/key.png" alt=""></div>
     <div id="" class="obstacle porte1"><img src="" alt="" srcset=""></div>
     <div class="menuJeu">
         <div class="nomPerso">nom personnage</div>
