--- a/HTML/map/map3.html
+++ b/HTML/map/map3.html
@@ -59,7 +59,7 @@
         <div class="Ennemi">
             <div class="obstacle blue monstre15"><img class="monstre" src="../../Images/decor/orcMarron.png" alt="">
             </div>
-            <div class="obstacle blue monstre16"><img class="monstre" src="../../Images/decor/armureFantome.png" alt="">
+            <div class="obstacle blue monstre16"><img class="monstre" src="../../Images/decor/cyclope.png" alt="">
             </div>
             <div class="obstacle blue monstre17"><img class="monstre" src="../../Images/decor/orcMarron.png" alt="">
             </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="obstacle blue monstre20"><img class="monstre" src="../../Images/decor/armureFantome.png" alt="">
             </div>
-            <div class="obstacle blue monstre21"><img class="monstre" src="../../Images/decor/cyclope.png" alt="">
+            <div class="obstacle blue monstre21"><img class="monstre" src="../../Images/decor/armureFantome.png" alt="">
             </div>
             <div class="obstacle blue monstre22"><img class="monstre" src="../../Images/decor/orcMarron.png" alt="">
             </div>
@@ -87,6 +87,7 @@
             <div id="piece13" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
             <div id="piece14" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
             <div id="piece15" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
+            <div id="piece16" class="obstacle or piece"><img src="../../Images/decor/coin.png" alt=""></div>
             <div id="tresor" class="obstacle or tresor"><img src="../../Images/decor/tresor.png" alt=""></div>
         </div>
         <div class="deco">
