--- a/HTML/map/map3.html
+++ b/HTML/map/map3.html
@@ -112,8 +112,8 @@
         <div id="mur59" class="mur"><img src="../../Images/decor/caisse.png" alt=""></div>
         <div id="mur60" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
         <div id="mur61" class="mur"><img src="../../Images/decor/murDemiAbiméMousse.png" alt=""></div>
-        <div id="mur62" class="mur"><img src="../../Images/decor/blockRouge.png" alt=""></div>
-        <div id="mur63" class="mur"><img src="../../Images/decor/blockRouge.png" alt=""></div>
+        <div id="mur62" class="mur obstacle"><img src="../../Images/decor/blockRouge.png" alt=""></div>
+        <div id="mur63" class="mur obstacle"><img src="../../Images/decor/blockRouge.png" alt=""></div>
         <div id="mur64" class="mur"><img src="../../Images/decor/caisseInverse.png" alt=""></div>
     </div>
     <div id="key3" class="obstacle key"><img src="../../Images/decor/key.png" alt=""></div>
